--- a/BingoApp/Views/Board/Create.cshtml
+++ b/BingoApp/Views/Board/Create.cshtml
@@ -23,7 +23,7 @@
         }
         }
     </p>
-    <table class="table table-dark">
+    <table class="table table-dark table-bordered">
         <tr>
             <th></th>
         </tr>
