--- a/BingoApp/Views/Board/Index.cshtml
+++ b/BingoApp/Views/Board/Index.cshtml
@@ -17,7 +17,7 @@
     <p>
         @Html.ActionLink("Draw Ball", "Create")
     </p>
-    <table class="table">
+    <table class="table table-dark table-bordered">
         <tr>
             <th></th>
         </tr>
