--- a/BingoApp/Views/Board/Create.cshtml
+++ b/BingoApp/Views/Board/Create.cshtml
@@ -25,7 +25,7 @@
     </p>
     <table class="table table-dark table-bordered">
         <tr>
-            <th></th>
+            
         </tr>
 
         <tr>
@@ -104,6 +104,7 @@
         </tr>
 
     </table>
+    <p>Ball Called -> @Model.lastCalledBall</p>
     <p>Balls remaining -> @Model.totalBalls</p>
     <div>
         @Html.ActionLink("New Board", "Delete")
