commit - added colors. Remived init on Index page.

--- a/BingoApp/Views/Board/Create.cshtml
+++ b/BingoApp/Views/Board/Create.cshtml
@@ -29,7 +29,7 @@
         </tr>
 
         <tr>
-            <td>B</td>
+            <td style="background-color: red">B</td>
             @foreach (var item in Model.Brow)
             {
                 <td>
@@ -44,7 +44,7 @@
         </tr>
 
         <tr>
-            <td>I</td>
+            <td style="background-color: orange">I</td>
             @foreach (var item in Model.Irow)
             {
                 <td>
@@ -59,7 +59,7 @@
         </tr>
 
         <tr>
-            <td>N</td>
+            <td style="background-color: yellow">N</td>
             @foreach (var item in Model.Nrow)
             {
                 <td>
@@ -74,7 +74,7 @@
         </tr>
 
         <tr>
-            <td>G</td>
+            <td style="background-color:yellowgreen">G</td>
             @foreach (var item in Model.Grow)
             {
                 <td>
@@ -89,7 +89,7 @@
         </tr>
 
         <tr>
-            <td>O</td>
+            <td style="background-color: lightseagreen">O</td>
             @foreach (var item in Model.Orow)
             {
                 <td>
