--- a/BingoApp/Views/Board/Delete.cshtml
+++ b/BingoApp/Views/Board/Delete.cshtml
@@ -19,11 +19,10 @@
     </p>
     <table class="table table-dark table-bordered">
         <tr>
-            
         </tr>
 
         <tr>
-            <td>B</td>
+            <td style="background-color: red">B</td>
             @foreach (var item in Model.Brow)
             {
                 <td>
@@ -38,7 +37,7 @@
         </tr>
 
         <tr>
-            <td>I</td>
+            <td style="background-color: orange">I</td>
             @foreach (var item in Model.Irow)
             {
                 <td>
@@ -53,7 +52,7 @@
         </tr>
 
         <tr>
-            <td>N</td>
+            <td style="background-color: yellow">N</td>
             @foreach (var item in Model.Nrow)
             {
                 <td>
@@ -68,7 +67,7 @@
         </tr>
 
         <tr>
-            <td>G</td>
+            <td style="background-color:yellowgreen">G</td>
             @foreach (var item in Model.Grow)
             {
                 <td>
@@ -83,7 +82,7 @@
         </tr>
 
         <tr>
-            <td>O</td>
+            <td style="background-color: lightseagreen">O</td>
             @foreach (var item in Model.Orow)
             {
                 <td>
