commit - bug fixes.

--- a/BingoApp/Views/Board/Create.cshtml
+++ b/BingoApp/Views/Board/Create.cshtml
@@ -104,8 +104,8 @@
         </tr>
 
     </table>
-    <p>Ball Called -> @Model.lastCalledBall</p>
-    <p>Balls remaining -> @Model.totalBalls</p>
+    <h1>Ball Called -> @Model.lastCalledBall</h1>
+    <h1>Balls remaining -> @Model.totalBalls</h1>
     <div>
         @Html.ActionLink("New Board", "Delete")
     </div>
