--- a/BingoApp/Views/Board/Delete.cshtml
+++ b/BingoApp/Views/Board/Delete.cshtml
@@ -97,7 +97,8 @@
         </tr>
 
     </table>
-    <p>Balls remaining -> @Model.totalBalls</p>
+    
+    <h1>Balls remaining -> @Model.totalBalls</h1>
     <div>
         @Html.ActionLink("New Board", "Delete")
     </div>
