commit - bug fixes.

--- a/BingoApp/Views/Board/Delete.cshtml
+++ b/BingoApp/Views/Board/Delete.cshtml
@@ -141,6 +141,7 @@
             <td>@Model.intRowG[4]</td>
             <td>@Model.intRowO[4]</td>
         </tr>
+        </table>
         <h1>Balls remaining -> @Model.totalBalls</h1>
         <div>
             @Html.ActionLink("New Board", "Delete")
