--- a/BingoApp/Views/Board/Index.cshtml
+++ b/BingoApp/Views/Board/Index.cshtml
@@ -14,12 +14,11 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <p>
-        @Html.ActionLink("Draw Ball", "Create")
-    </p>
+    <div class="text-center">
+        @Html.ActionLink("Draw Ball", "Create", null, new { @class = "btn btn-primary" })
+    </div>
     <table class="table table-dark table-bordered">
         <tr>
-           
         </tr>
 
 
@@ -127,8 +126,8 @@
             <td>@Model.intRowB[2]</td>
             <td>@Model.intRowI[2]</td>
             <td>FREE</td>
-            <td>@Model.intRowB[2]</td>
-            <td>@Model.intRowI[2]</td>
+            <td>@Model.intRowG[2]</td>
+            <td>@Model.intRowO[2]</td>
         </tr>
         <tr>
             <td>@Model.intRowB[3]</td>
@@ -146,10 +145,21 @@
         </tr>
 
     </table>
+    <div class="text-center">
+        <div style="width: 50%; float: left;">
+            <h1>Balls remaining -> @Model.totalBalls</h1>
+        </div>
+        <div style="width: 50%; float: left;">
+            <h1>&nbsp;</h1>
+        </div>
 
-    <h1>Balls remaining -> @Model.totalBalls</h1>
-    <div>
-        @Html.ActionLink("New Board", "Delete")
     </div>
+    
+    <div class="text-center">
+        @Html.ActionLink("New Board", "Delete", null, new { @class = "btn btn-primary" })
+    </div>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+   
 </body>
 </html>
