--- a/BingoApp/Content/Site.css
+++ b/BingoApp/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: goldenrod;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,14 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+/* MJM custom styling */
+.column {
+    float: left;
+    width: 33.33%;
+}
+
+.container {
+    width: 100%;
 }
