--- a/BingoApp/Views/Board/Index.cshtml
+++ b/BingoApp/Views/Board/Index.cshtml
@@ -103,7 +103,7 @@
     </div>
     <!-- Card table -->
     <div class="container">
-        <div class="column">&nbsp;</div>
+        <div class="column"><h1 class="padit">Balls remaining -> @Model.totalBalls</h1></div>
         <div class="column">
             <table class="table table-bordered">
                 <tr>
@@ -153,15 +153,7 @@
             </div>
             <div class="column">&nbsp;</div>
         </div>
-            <div class="text-center">
-                <div style="width: 50%; float: left;">
-                    <h1>Balls remaining -> @Model.totalBalls</h1>
-                </div>
-                <div style="width: 50%; float: left;">
-                    <h1>&nbsp;</h1>
-                </div>
-
-            </div>
+            
 
             <div class="text-center">
                 @Html.ActionLink("New Board", "Delete", null, new { @class = "btn btn-primary" })
