commit - Free space styling change.

--- a/BingoApp/Views/Board/Index.cshtml
+++ b/BingoApp/Views/Board/Index.cshtml
@@ -130,7 +130,7 @@
                 <tr>
                     <td>@Model.intRowB[2]</td>
                     <td>@Model.intRowI[2]</td>
-                    <td>FREE</td>
+                    <td style="background-color: red">FREE</td>
                     <td>@Model.intRowG[2]</td>
                     <td>@Model.intRowO[2]</td>
                 </tr>
